# ChangeLog for games-misc/OilWar
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-misc/OilWar/ChangeLog,v 1.10 2013/11/12 01:53:15 mr_bones_ Exp $

  12 Nov 2013; Michael Sterrett <mr_bones_@gentoo.org> OilWar-1.2.1-r1.ebuild:
  EAPI=5; tidy

  07 Oct 2008; Michael Sterrett <mr_bones_@gentoo.org>
  OilWar-1.2.1-r1.ebuild:
  avoid parallel make install failure (bug #239711); tidy

*OilWar-1.2.1-r1 (23 May 2007)

  23 May 2007; Tupone Alfredo <tupone@gentoo.org> +OilWar-1.2.1-r1.ebuild:
  Added menu. Bug #159757 by Pacho Ramos

  24 Sep 2006; <blubb@gentoo.org> OilWar-1.2.1.ebuild:
  stable on amd64

  22 Nov 2004; Joseph Jezak <josejx@gentoo.org> OilWar-1.2.1.ebuild:
  Marked ppc stable.

  28 Sep 2004; Sven Wegener <swegener@gentoo.org> :
  Gentoo Technologies, Inc. -> Gentoo Foundation

  05 Sep 2004; Sven Wegener <swegener@gentoo.org> :
  Fixed ChangeLog header.

  03 Sep 2004; <blubb@gentoo.org> OilWar-1.2.1.ebuild:
  added ~amd64 keyword

  21 Jul 2004; David Holm <dholm@gentoo.org> OilWar-1.2.1.ebuild:
  Added to ~ppc.

*OilWar-1.2.1 (20 Jul 2004)

  20 Jul 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.