@@ -1,5 +1,5 @@
 DIST OilWar-1.2.1.tar.gz 515013 SHA256 e16ffd11439dfc857daaa98cf8a266b24794a4fbb1e84c1558794ffb622b5c63 SHA512 303581caf1cb59a4623b136595e0c1af6f682ae4c059a8848b481b42dee622083d436edb86ca9073edcf4c573f8a73b284dddea89cb8013943ef4ec81b3e17a1 WHIRLPOOL 5447c0af48b55e939b188e6351b63b3f3050fe3f7529026604194c95c84fcb2a254e33b39b55dd44391af81c62305aeac5864204104f8612813078d31be04db1
 DIST OilWar.png 2961 SHA256 f1e77e048b979b493fb9e3c48fc6a8d643836f121775f3cc4d64321260377e1a SHA512 75bd4c18791593f0bb81b51d87f6f033e2ebebe6de3653276b14e852d3625f01a61fb34257eb3d15ebf265908563f2820793b84196138b39c9329839e8fefe2d WHIRLPOOL 9bf04463dba9e043fb3c6d0dce69cc73796bba52cb06b820a304860d13294954018f6dd290ca4d760cf834bd0fefc0bdcc78f9748e9e154d68a2e083aecd1786
-EBUILD OilWar-1.2.1-r1.ebuild 1242 SHA256 526ff93ed8aa4206a2ea6f100f5f2b9ee768e3faea2f4629eba40ae8a7da2cad SHA512 a715429583df7a61f02ef1ed1e38d9d4da44687c1c2f18c0b21802ddf07430d133374d6e91b450047348630a68d8502597c91f029865d8232e3ec10fc10a6f7e WHIRLPOOL dedd5c89cc7267cd9ca1a3102618b4cffbe52179720074ebb0dc18b74740d884c6b7d90414b167c32ad0f803b964d96f6f55d1797b802704fcb64afc86ab8f36
-MISC ChangeLog 1228 SHA256 7db067e52f13777627e2dc177c14d34f5a2b79302c5ab9e900983d7113f3b85b SHA512 555b6a7bfff42eee15f96cb0fc76500781dea9b92f5f2021cc3c692bae2574c3bef95c085379c25478a408842ca6ac4dac00bb37fff913f86ce0c5273e1efc64 WHIRLPOOL 53f060ab539331c4bfc4b54c8865d378b4c6f38c9eb2340f08cff0a6cb2c053203d6d79e6506560207cfe92f7fd584227f0d04b6e0848676054a6ae874fa2cf1
+EBUILD OilWar-1.2.1-r1.ebuild 1231 SHA256 f78d4afffff2004dfaa6123abd7fd88b2c3a883f858d65e6c136ecfe8f95b98d SHA512 b85173691ec2af21f379f2901e1a7be09b4a8b69d02adccb0bff9d4e3e2a7460be4a152b51a211cecdd6deeabffd577ccfbbbe11b16d709fbc5c9a069a6a8c37 WHIRLPOOL c13333cda9a5f72a7b7ab280b4ef492afdc4ada7e4b7b311801dc8827517857aef93b70a3d690e53ab53c836a73e9ed59dd44ee61f52485bcda6954e6664a2b3
+MISC ChangeLog 1314 SHA256 cf15e8325b530e989737a8a219168d7a1298560f3e486bb505639f46ad4a79c1 SHA512 ebf0d10498814a4946d218fefc1d3f745f12c0a3df3d74045419e08a26fd77b7246ea8b4759c1be4f7d7c832fbddb2b8d49d0a2b48a97048aa059ea893ddf8be WHIRLPOOL 188f3a0f61dbcc5b9e8a215bb9c227486c84a395cd85d3ba932f6f3eabd43c838e7d2752d3e97ebca1dd03990a0c0fee0f3768c5a14ee5c764af09009e27c440
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
