@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/OilWar/OilWar-1.2.1-r1.ebuild,v 1.4 2013/11/12 01:53:15 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/OilWar/OilWar-1.2.1-r1.ebuild,v 1.5 2013/11/12 05:18:50 patrick Exp $
 
 EAPI=5
 inherit eutils gnome2-utils games
@@ -43,14 +43,14 @@ src_install() {
 
 pkg_preinst() {
 	games_pkg_preinst
-    gnome2_icon_savelist
+	gnome2_icon_savelist
 }
 
 pkg_postinst() {
 	games_pkg_postinst
-    gnome2_icon_cache_update
+	gnome2_icon_cache_update
 }
 
 pkg_postrm() {
-    gnome2_icon_cache_update
+	gnome2_icon_cache_update
 }
