@@ -9,4 +9,4 @@ RDEPEND=media-libs/libsdl[video] media-libs/sdl-image[png] media-libs/sdl-mixer
 SLOT=0
 SRC_URI=mirror://gentoo/OilWar-1.2.1.tar.gz mirror://gentoo/OilWar.png
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	4878e7f88afc0ba0866ac112190b0fd4	games	0fb7637597e0869f6c8be79b11d0135a	gnome2-utils	b66c7c3889d2dd0913e9f3d2ac1c0859	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=e5235e008e4de571982297e61f9095b9
+_md5_=b9e52126c8cfd2f615b444d9e836db85
