@@ -1,6 +1,9 @@
 # ChangeLog for games-misc/OilWar
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/OilWar/ChangeLog,v 1.10 2013/11/12 01:53:15 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/OilWar/ChangeLog,v 1.11 2013/11/12 05:18:50 patrick Exp $
+
+  12 Nov 2013; Patrick Lauer <patrick@gentoo.org> OilWar-1.2.1-r1.ebuild:
+  Whitespace
 
   12 Nov 2013; Michael Sterrett <mr_bones_@gentoo.org> OilWar-1.2.1-r1.ebuild:
   EAPI=5; tidy
